--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "David Négrier",
-            "email": "d.negrier@thecodingmachine.com",
+            "name": "Kevin Nguyen",
+            "email": "k.nguyen@thecodingmachine.com",
             "homepage": "http://mouf-php.com"
         }
     ],
