--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     	"php": ">=5.3.0",
     	"mouf/utils.common.validators": ">=3.0-dev,<4.0",
     	"mouf/utils.common.getvars": ">=2.0-dev,<3.0",
-		"mouf/database.datasource.formatters": ">=3.0-dev,<4.0",
+		"mouf/utils.common.formatters": ">=3.0-dev,<4.0",
 		"mouf/database.daointerface": ">=2.0-dev,<3.0",
 		"mouf/html.utils.weblibrarymanager": ">=2.0-dev,<3.0",
 		"mouf/database.tdbm": ">=3.0-dev,<4.0",
