changed install type to file

--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
 	     "mouf": {
 			"install": [
 			{
-				"type": "url",
-	    		"url": "src/bceInstall.php"
+				"type": "file",
+	    		"file": "src/bceInstall.php"
 			}
 			]
 		}
