--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
     ],
     "require": {
     	"php": ">=5.3.0",
-    	"mouf/utils.common.validators": ">=3.0-dev,<4.0",
-    	"mouf/utils.common.getvars": ">=2.0-dev,<3.0",
-		"mouf/utils.common.formatters": ">=3.0-dev,<4.0",
-		"mouf/database.dao-interface": ">=2.0-dev,<3.0",
-		"mouf/html.utils.weblibrarymanager": ">=2.0-dev,<3.0",
-		"mouf/database.tdbm": ">=3.0-dev,<4.0",
+    	"mouf/utils.common.validators": "~3.0",
+    	"mouf/utils.common.getvars": "~2.0",
+		"mouf/utils.common.formatters": "~3.0",
+		"mouf/database.dao-interface": "~2.0",
+		"mouf/html.utils.weblibrarymanager": "~2.0",
+		"mouf/html.utils.bootstrap": "~2.1",
+		"mouf/database.tdbm": "~3.0",
 		"mouf/javascript.jquery.jquery": "~1.7.2",
 		"mouf/javascript.jquery.jquery-ui": "~1.8.22",
 		"mouf/javascript.jquery.jquery-validate": "~1.10"
