--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"mouf/utils.common.formatters": ">=3.0-dev,<4.0",
 		"mouf/database.dao-interface": ">=2.0-dev,<3.0",
 		"mouf/html.utils.weblibrarymanager": ">=2.0-dev,<3.0",
+		"mouf/html.htmlelement": "~2.0",
 		"mouf/database.tdbm": ">=3.0-dev,<4.0",
 		"mouf/javascript.jquery.jquery": "~1.7.2",
 		"mouf/javascript.jquery.jquery-ui": "~1.8.22",
