--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"mouf/database.tdbm": "~3.0",
 		"mouf/javascript.jquery.jquery": "~1.7",
 		"mouf/javascript.jquery.jquery-ui": "~1.8",
-		"mouf/javascript.jquery.jquery-validate": "~1.10"
+		"mouf/javascript.jquery.jquery-validate": "~1.10",
+		"mouf/utils.value.value-interface": "~1.0"
     },
     "autoload": {
         "psr-0": {
