--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"mouf/javascript.jquery.jquery-validate": "~1.10",
 		"mouf/utils.value.value-interface": "~1.0",
 		"mouf/html.utils.ckeditor": "~1.0",
-		"mouf/javascript.fileuploader": "~2.0"
+		"mouf/html.widgets.fileuploaderwidget": "~2.0"
     },
     "autoload": {
         "psr-0": {
