Making the namespace more specific in psr0 autoloader of Composer. This will help improve performance by reducing the number of useless calls to file_exists.

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Mouf": "src/"
+            "Mouf\\MVC\\BCE": "src/"
         }
     },
     "minimum-stability": "dev",
