--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"mouf/javascript.jquery.jquery-validate": "~1.10",
 		"mouf/utils.value.value-interface": "~1.0",
 		"mouf/html.utils.ckeditor": "~1.0",
-		"mouf/html.widgets.fileuploaderwidget": "~2.0"
+		"mouf/html.widgets.fileuploaderwidget": "~2.0",
+		"mouf/html.widgets.form-elements": "~1.0"
     },
     "suggest": {
         "mouf/html.utils.bootstrap": "Use bootstrap to make a graat rendering"
