--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     	"mouf/utils.common.getvars": "~2.0",
 		"mouf/utils.common.formatters": "~3.0",
 		"mouf/database.dao-interface": "~2.0",
-		"mouf/html.utils.weblibrarymanager": "~2.0",
+		"mouf/html.utils.weblibrarymanager": ">=2.0, <4.0",
 		"mouf/database.tdbm": "~3.0",
 		"mouf/javascript.jquery.jquery": "~1.7",
 		"mouf/javascript.jquery.jquery-ui": "~1.8",
